--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,17 @@
 :root {
     --prymary-text-color: #757575;
     --title-text-color: #212121;
-    --accent-color: #2196F3;
+    --accent-color: #2196f3;
     --prymary-white-color: #000000;
     --second-colr-text: #ffffff;
 }
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
@@ -54,8 +60,7 @@ body {
 
 .header {
     margin: 0;
-    border-bottom: 1px solid #ECECEC;
-;
+    border-bottom: 1px solid #ececec;
 }
 .header-navigation {
     display: flex;
@@ -69,11 +74,10 @@ body {
     margin-right: 93px;
 }
 
-.header-item:not(:last-child), 
+.header-item:not(:last-child),
 .header-mail {
     margin-right: 50px;
 }
-
 
 .header-logo,
 .footer-logo {
@@ -87,17 +91,30 @@ body {
 }
 .footer-logo {
     color: var(--second-colr-text);
- }
+}
 .logo-title {
     color: var(--accent-color);
 }
 
-.header-link, .header-mail, .header-tel {
+.header-link,
+.header-mail,
+.header-tel {
     font-weight: 500px;
-    Font-size: 14px;
+    display: flex;
+    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-mail,
+.icon-tell {
+    fill: var(--prymary-text-color);
+    margin-right: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 .active {
@@ -105,31 +122,42 @@ body {
 }
 
 .header-link:hover,
-.header-mail:hover, 
+.header-mail:hover .icon-mail,
+.header-mail:hover,
+.header-tel:hover .icon-tell,
 .header-tel:hover,
 .footer-mail:hover,
-.footer-tel:hover {
+.footer-tel:hover,
+.icon-mail:hover {
     color: var(--accent-color);
+    fill: var(--accent-color);
 }
 
 .header-link:focus,
-.header-mail:focus, 
+.header-mail:focus,
 .header-tel:focus,
 .footer-mail:focus,
 .footer-tel:focus {
     color: var(--accent-color);
 }
 
-.header-tel, .header-mail {
+.header-tel,
+.header-mail {
     color: var(--prymary-text-color);
 }
-
 
 /* ------------------------preview----------------------------------*/
 .preview {
     background-color: #2F303A;
+    background-image:
+    linear-gradient(
+        rgba(47, 48, 58, 0.4), 
+        rgba(47, 48, 58, 0.4)
+        ),
+    url(../images/preview.jpg);
     padding: 200px;
 }
+
 .preview-text {
     margin: 0 auto;
     max-width: 700px;
@@ -147,7 +175,7 @@ body {
     margin: 30px auto;
     height: 50px;
     min-width: 200px;
-    
+
     border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
@@ -157,17 +185,16 @@ body {
     color: var(--second-colr-text);
     background-color: var(--accent-color);
     border: none;
-   
 }
 
 .preview-btn:hover,
 .filtr-btn:hover {
-    background-color: #118CE8;
+    background-color: #118ce8;
     color: var(--second-colr-text);
 }
 .preview-btn:focus,
 .filtr-btn:focus {
-    background-color: #118CE8;
+    background-color: #118ce8;
     color: var(--second-colr-text);
 }
 
@@ -182,13 +209,13 @@ body {
     padding-bottom: 30px;
     font-size: 16px;
     line-height: 1.18;
-    letter-spacing: 0.03em; 
+    letter-spacing: 0.03em;
 }
 
 .portfolio {
     margin-right: 30px;
     margin-bottom: 30px;
-    border: 1px solid #EEEEEE;
+    border: 1px solid #eeeeee;
 }
 .portfolio:nth-child(3n) {
     margin-right: 0px;
@@ -210,7 +237,7 @@ body {
     letter-spacing: 0.06em;
     color: var(--title-text-color);
     cursor: pointer;
-    background-color:#F5F4FA;
+    background-color: #f5f4fa;
     border: none;
 }
 .filtr-m:not(:last-child) {
@@ -219,7 +246,7 @@ body {
 .proect-card {
     display: flex;
     align-content: center;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;
 }
 
 .title {
@@ -230,14 +257,13 @@ body {
     color: var(--title-text-color);
     text-transform: uppercase;
     margin-bottom: 10px;
-
 }
 
 .text {
     font-family: Roboto;
     font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em
+    letter-spacing: 0.03em;
 }
 
 .work,
@@ -257,8 +283,7 @@ body {
     line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
-    color: var( --title-text-color);
-
+    color: var(--title-text-color);
 }
 
 .position {
@@ -270,9 +295,7 @@ body {
 }
 
 /* -------------------особенности----------------- */
-.info-section {
-    display: none;    
-}
+
 
 .benefits {
     display: flex;
@@ -285,7 +308,6 @@ body {
 .galery {
     display: flex;
     margin-top: 50px;
-    
 }
 .img-work:not(:last-child) {
     margin-right: 30px;
@@ -293,14 +315,13 @@ body {
 
 /* -----------------командв------------------- */
 .team-section {
-    background-color: #F5F4FA;
+    background-color: #f5f4fa;
 }
 .team {
     display: flex;
 }
 .team-title {
     padding-bottom: 50px;
-    
 }
 .team-card:not(:last-child) {
     margin-right: 30px;
@@ -310,13 +331,12 @@ body {
 }
 .team-card {
     background-color: #fff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
-                0px 1px 1px rgba(0, 0, 0, 0.14), 
-                0px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 /* ------------------подавл сайта ---------------------------*/
 .footer {
-    background-color: #2F303A;;
+    background-color: #2f303a;
     padding: 60px;
 }
 
@@ -335,8 +355,7 @@ address {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #FFFFFF;
-
+    color: #ffffff;
 }
 
 .footer-mail,
