--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,8 @@ body {
         ),
     url(../images/preview.jpg);
     padding: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .preview-text {
@@ -191,11 +193,14 @@ body {
 .filtr-btn:hover {
     background-color: #118ce8;
     color: var(--second-colr-text);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+
 .preview-btn:focus,
 .filtr-btn:focus {
     background-color: #118ce8;
     color: var(--second-colr-text);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 /* ----------------стиль для страницы портфолио ----------------*/
@@ -216,7 +221,13 @@ body {
     margin-right: 30px;
     margin-bottom: 30px;
     border: 1px solid #eeeeee;
+    
 }
+
+.portfolio:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio:nth-child(3n) {
     margin-right: 0px;
 }
@@ -264,10 +275,12 @@ body {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    padding-right: 2px;
 }
 
 .work,
-.team-title {
+.team-title,
+.customers-title {
     margin-top: 0;
     font-weight: 700px;
     font-size: 36px;
@@ -287,7 +300,7 @@ body {
 }
 
 .position {
-    padding-bottom: 30px;
+    padding-bottom: 16px;
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
@@ -296,6 +309,25 @@ body {
 
 /* -------------------особенности----------------- */
 
+.benefits-box {
+    width: 270px;
+    height: 120px;
+    background-color: #F5F4FA;
+    margin-bottom: 33px;
+    margin-right: 0;
+    display: flex;
+    border-radius: 4px;
+}
+
+.benefits-icon {
+    margin: auto;
+    
+
+}
+
+.info-section {
+    display: none;
+}
 
 .benefits {
     display: flex;
@@ -314,6 +346,7 @@ body {
 }
 
 /* -----------------командв------------------- */
+
 .team-section {
     background-color: #f5f4fa;
 }
@@ -333,7 +366,87 @@ body {
     background-color: #fff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+    
 }
+
+.social-list-item {
+    width: 44px;
+    height: 44px;
+}
+
+.social-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #afb1b8;
+}
+
+.social-link:hover,
+.social-link:focus {
+    background-color: var(--accent-color);
+    color: #ffffff;
+}
+
+.social-icon {
+    fill: currentColor
+}
+
+.list-item {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    /* margin-top: 20px; */
+}
+
+.social-list-item + .social-list-item {
+    margin-left: 10px;
+}
+
+/* ------------------Клиенты------------------ */
+.customers-link {
+    display: flex;
+    width: 170px;
+    height: 92px;
+    border: 1px solid;
+    border-color: #AFB1B8;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+}
+.customers-link {
+    color: #afb1b8;
+}
+
+.customers-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.customers-icon {
+    fill: currentColor;
+}
+
+.customers-link:hover,
+.customers:hover {
+    color: var(--accent-color);
+    border-color: var(--accent-color);
+}
+
+.customers-link:focus,
+.customers:focus {
+    color: var(--accent-color);
+    border-color: var(--accent-color);
+}
+
+.customers + .customers {
+    margin-left: 30px;
+}
+
 /* ------------------подавл сайта ---------------------------*/
 .footer {
     background-color: #2f303a;
@@ -377,4 +490,47 @@ address {
     padding-left: 24px;
     padding-right: 24px;
     padding-top: 20px;
+}
+
+.subscribe {
+    display: flex;
+    align-items: center  ;
+    
+}
+
+.social-link-footer {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color:rgba(255, 255, 255, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+
+.social-link-footer:hover,
+.social-link:focus {
+    background-color: var(--accent-color);
+    color: #ffffff;
+}
+
+.list-item-footer {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.subscribe-box {
+    margin-left: 70px;
+}
+
+.subscribe-title {
+    font-weight: 700px;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
 }
